Added Eucalyptus support + refactoring
- supported EBS devices in Eucaluptus (tested on Ubuntu Maverick alpha)
- removed hardcoded device path, moved to /etc/ebsmount.conf
- refactored device path test, we no longer use it in the mountpath

- Thanks to Scott Moser <scott.moser@canonical.com>

--- a/docs/README
+++ b/docs/README
@@ -1,5 +1,5 @@
-EBSmount: Automatically mount EC2 EBS (Elastic Block Storage) devices
-=====================================================================
+EBSmount: Automatically mount EC2/Eucalyptus EBS devices
+========================================================
 
 EBSmount has 2 commands:
 
@@ -8,6 +8,7 @@ EBSmount has 2 commands:
 
 Features:
 
+    - Supports Amazon EC2 and Eucalyptus EBS devices
     - Automatically mounts EBS devices when they are attached (via udev)
     - Supports formatted devices, as well as partitions
     - Ignores unformatted devices and unsupported filesystems
@@ -32,6 +33,8 @@ Default configuration (/etc/ebsmount.conf):
     MOUNTOPTIONS=noatime
     FILESYSTEMS=ext2 ext3
     LOGFILE=/var/log/ebsmount.log
+
+    DEVPATHS=/devices/xen/vbd- /devices/virtio-pci/virtio
 
 Unique mountpoints:
 
