--- a/docs/README
+++ b/docs/README
@@ -57,6 +57,9 @@ Hooking scripts:
       RUNHOOKS must be set to True in /etc/ebsmount.conf Additionally, hook
       scripts will only be executed if they are owned by root.
 
+    - The mountpoint of the device will be set in the environment for
+      convenience, as MOUNTPOINT
+
     - This provides a very powerful mechanism. In its simplest form, the
       user might want to symlink the mountpoint to a more accessible
       path, for example:
@@ -65,7 +68,7 @@ Hooking scripts:
 
         #!/bin/bash -e
         target=/vol
-        mountp=$(dirname $(dirname $0))
-        [ ! -h $target ] && ln -s $mountp $target
+        mountp=$MOUNTPOINT
+        [ ! -e $target ] && ln -s $mountp $target
 
 
